@@ -77,6 +77,10 @@ void rollover_logfile(void);
 
 ///////////////////////////////////////////////////////
 
+int is_secure_username(const u08bits *username);
+
+///////////////////////////////////////////////////////
+
 #ifdef __cplusplus
 }
 #endif
